# optimal-image

./: .editorconfig  .travis.yml  Cargo.toml  Makefile  README.md  install-vips.sh  rustfmt.toml
.githooks/: pre-commit
ci/: install-vips.sh
src/: main.rs
src/optimal_image/: lib.rs  search.rs
src/optimal_image/compress/: image.rs  instance.rs  mod.rs
src/optimal_image/dataclients/: jpeg.rs  mod.rs  png.rs
src/optimal_image/encoders/: image_jpeg.rs  mod.rs  webp.rs
src/optimizer/dataclients/: mod.rs  png.rs
