[package]
name = "optimal-image"
version = "0.2.0"
authors = ["Andrea Moretti <axyzxp@gmail.com>"]

[badges]
travis-ci = { repository = "https://github.com/axyz/optimal-image", branch = "master" }

[dependencies]
clap = "2.32.0"
dssim = "2.9.9"
image = "0.19.0"
imgref = "1.3.5"
rgb = "0.8.11"
lodepng = "2.1.2"
vips-sys = "0.1.2"
libc = "0.2.43"
libwebp-rust = "0.1.0"

[[bin]]
name = "optimal_image"
path = "src/bin/main.rs"

[lib]
name = "optimal_image"
path = "src/optimal_image/lib.rs"
